# rsiot-tester

./: README.md
archive_math_process/: Cargo.toml
archive_math_process/.cargo/: config.toml
archive_math_process/src/: config_logger.rs  config_math.rs  config_timescaledb.rs  config_timescaledb_reader.rs  main.rs  message.rs
trend/: .env  README.md  docker-compose.yml
trend/tester_tsdb/: init.sql
trend/testet_grafana/datasources/: tester_tsdb.yml
